Salesforce CPQ/main/default/objects/RecordJob__c/RecordJob__c.object-meta.xml
<CustomObject>
    <customHelpPage>RecordJobHelp</customHelpPage>
    <description>Maps records to the Apex Jobs it initiates</description>
    <label>Record Job</label>
    <nameField>
        <displayFormat>JOB{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>