Salesforce CPQ/main/default/objects/RecordJob__c/fields/JobDetails__c.field-meta.xml
<CustomField>
    <fullName>JobDetails__c</fullName>
    <description>The details of the background job performed if no job id was specified.</description>
    <inlineHelpText>The details of the background job performed if no job id was specified.</inlineHelpText>
    <label>Job Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>