Salesforce CPQ/main/default/objects/RecordJob__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <description>The Apex Job Id</description>
    <label>Job Id</label>
    <length>90</length>
    <type>Text</type>
</CustomField>