Salesforce CPQ/main/default/objects/RecordJob__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RecordId__c</columns>
    <columns>JobId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>